--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
 		<!--Creamos el campo dónde se ingresa la cadena a evaluar y el botón-->
 		<div id="FenInDiv" align="center">
-			<br>Ingrese su movimiento:<br/>
+			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Ingrese su movimiento:</p>
 			<input type="text" id="fenIn"/>		
 			<button type="button" id="SetFen">Posición FEN</button>	
 		</div>
 
-		<div id="final">
-			<p align="center">Proyecto Final - Lenguajes de Programación</p>
+		<div id="final" align="center">
+			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Proyecto Final - Lenguajes de Programación</p>
 		</div>
 		
 		<!--Creamos el tablero, matriz-->
 		<div id="board"></div>
 
 		<div id="creditos" align="center">
-			<p>BY: Verónica Zapata Vargas y Juan Fernando Romero</p>
-			<p>Universidad EAFIT</p>
+			<p style="font-family: monaco,Consolas,Lucida Console,monospace">BY: Verónica Zapata Vargas y Juan Fernando Romero</p>
+			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Universidad EAFIT</p>
 		</div>
 
 		
