--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link href="styles.css" rel="stylesheet" type="text/css">	
 		<script type="text/javascript"> if (!window.console) console = {log: function() {}}; </script>
 	</head>
-	<body>
+	<body style="background-color:#FFF0F5;">
 		<header id="hola">
 			<font face="Fantasy,arial,verdana" size=6 >¡BIENVENIDO AL JUEGO DE AJEDREZ!</font>		
 		</header>	
@@ -15,7 +15,7 @@
 		<div id="FenInDiv" align="center">
 			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Ingrese su movimiento:</p>
 			<input type="text" id="fenIn"/>		
-			<button type="button" id="SetFen">Posición FEN</button>	
+			<button type="button" id="SetFen" style="background-color:#FFB6C1" >POSICIÓN FEN</button>	
 		</div>
 
 		<div id="final" align="center">
