--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<div id="FenInDiv" align="center">
 			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Ingrese su movimiento:</p>
 			<input type="text" id="fenIn"/>		
-			<button type="button" id="SetFen" style="background-color:#FFB6C1" >POSICIÓN FEN</button>	
+			<button type="button" id="SetFen" style="background-color:#FFB6C1" >POSICIÓN FEN</button>
+			<button type="button" id="SetNewGame" style="background-color:#FFB6C1" >REINICIAR JUEGO</button>	
+		
 		</div>
 
 		<div id="final" align="center">
