--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<!--Creamos el campo dónde se ingresa la cadena a evaluar y el botón-->
 		<div id="FenInDiv" align="center">
-			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Ingrese su movimiento:</p>
+			<p style="font-family: monaco,Consolas,Lucida Console,monospace">Ingrese la notación a evaluar:</p>
 			<input type="text" id="fenIn"/>		
 			<button type="button" id="SetFen" style="background-color:#FFB6C1" >POSICIÓN FEN</button>
 			<button type="button" id="SetNewGame" style="background-color:#FFB6C1" >REINICIAR JUEGO</button>	
